[package]
name = "ads-webasm"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
yew.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
csv = { workspace = true, optional = true }
gloo-file = { workspace = true }

yew-tincture.workspace = true

simple-obj-parse = { workspace = true, optional = true }
textured-tri-mesh = { workspace = true, optional = true }
strand-cam-enum-iter.workspace = true
rust-cam-bui-types.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "CanvasRenderingContext2d",
    "DataTransfer",
    "Document",
    "DomRect",
    "DomTokenList",
    "DragEvent",
    "Element",
    "EventSource",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
]

[features]
obj = ["simple-obj-parse", "textured-tri-mesh"]
csv-widget = ["csv"]
