[package]
name = "ads-apriltag"
license = "BSD-2-Clause"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
apriltag-sys = "0.3"
machine-vision-formats = "0.1"

[dev-dependencies]
convert-image = { path = "../convert-image" }
image = { workspace = true, features = ["jpeg"] }
