[package]
name = "basic-frame"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
chrono.workspace = true
machine-vision-formats = { workspace = true, features = ["std"] }

timestamped-frame = { path = "../timestamped-frame" }
convert-image = { workspace = true, optional = true }
