[package]
name = "bg-movie-writer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
log = "0.4.5"
chrono.workspace = true
thiserror.workspace = true

mp4-writer = { path = "../media-utils/mp4-writer", features = [
    "openh264-encode",
] }
machine-vision-formats.workspace = true
ci2-remote-control = { path = "../ci2-remote-control" }
nvenc = { path = "../nvenc" }
basic-frame = { path = "../basic-frame" }
channellib = { path = "../channellib" }

ffmpeg-writer.workspace = true
srt-writer.workspace = true
