[package]
name = "bg-movie-writer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
log = "0.4.5"
chrono.workspace = true
thiserror.workspace = true

mp4-writer = { workspace = true, features = ["openh264-encode"] }
machine-vision-formats.workspace = true
ci2-remote-control.workspace = true
nvenc = { path = "../nvenc" }
basic-frame = { path = "../basic-frame" }

ffmpeg-writer.workspace = true
srt-writer.workspace = true
serde.workspace = true
serde_json.workspace = true
