[package]
name = "braid-april-cal-webapp"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Andrew Straw <strawman@astraw.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-tincture = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "HtmlAnchorElement",
    "Url",
] }
log = "0.4"
wasm-logger = "0.2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
http = "0.2"
itertools = "0.7.8"
nalgebra = "0.30"
cam-geom = "0.12"
chrono = { version = "0.4.23", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "wasmbind",
] }
dlt = { version = "0.10", features = ["serde-serialize"] }

mvg = { path = "../mvg", features = ["serde-serialize"] }
flydra-mvg = { path = "../flydra-mvg" }
ads-webasm = { path = "../ads-webasm", features = ["csv-widget"] }

[features]
backtrace = ["mvg/backtrace", "flydra-mvg/backtrace"]
