[package]
name = "braid-april-cal"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
itertools = "0.10.5"
nalgebra = { workspace = true }
cam-geom = { workspace = true }
opencv-ros-camera = { workspace = true, features = ["serde-serialize"] }
chrono = { version = "0.4.23", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "wasmbind",
] }
dlt = { workspace = true, features = ["default", "serde-serialize"] }
argmin = { version = "0.8.1", features = [
    "wasm-bindgen",
], default-features = false }
argmin-math = "0.3"

mvg = { path = "../mvg", features = ["serde-serialize"] }
flydra-mvg = { path = "../flydra-mvg" }
opencv-calibrate = { path = "../opencv-calibrate", optional = true }

[dev-dependencies]
anyhow = "1"
ads-webasm = { path = "../ads-webasm", features = ["csv-widget"] }

[features]
default = ["solve-pnp"]

backtrace = ["mvg/backtrace", "flydra-mvg/backtrace"]
solve-pnp = ["opencv-calibrate"]
