[package]
name = "braid-april-cal"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde_yaml.workspace = true
itertools.workspace = true
nalgebra.workspace = true
cam-geom.workspace = true
opencv-ros-camera = { workspace = true, features = ["serde-serialize"] }
chrono.workspace = true
dlt = { workspace = true, features = ["default", "serde-serialize"] }
argmin = { version = "0.8.1", features = [
    "wasm-bindgen",
], default-features = false }
argmin-math = "0.3"

mvg = { workspace = true, features = ["serde-serialize"] }
flydra-mvg.workspace = true
opencv-calibrate = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
ads-webasm = { workspace = true, features = ["csv-widget"] }

[features]
solve-pnp = ["opencv-calibrate"]
