[package]
name = "braid-config-data"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
toml = "0.5"
shellexpand = "2.0"
thiserror.workspace = true
log = "0.4"

flydra-types = { path = "../flydra-types" }
serde = { version = "1.0.79", features = ["derive"] }

[features]
backtrace = []
