[package]
name = "braid-http-session"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json = "1"
futures = "0.3"

bui-backend-session = { path = "../bui-backend-session" }
flydra-types.workspace = true
http-body-util.workspace = true
bytes = "1.5.0"
axum.workspace = true
cookie_store.workspace = true
parking_lot = "0.12.1"
