[package]
name = "braid-http-session"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json = "1"
futures = "0.3"
bytes = "1.5.0"
axum.workspace = true
http-body-util.workspace = true
cookie_store.workspace = true

braid-types.workspace = true
strand-bui-backend-session.workspace = true
strand-bui-backend-session-types.workspace = true
