[package]
name = "braid-offline"
version =  "0.12.0-alpha.2" # braid release synchronized
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.5", features = ["release_max_level_debug"] }
structopt = "0.3"
thiserror = "1.0"
anyhow = "1.0"
csv = "1.1"
serde = {version="^1.0", features=["derive"]}
toml = "0.5"
itertools = "0.10.3"
chrono = "0.4"
tokio = {version="1.0.1", default-features=false, features=["rt-multi-thread","macros"]}
tokio-stream = "0.1.8"
futures = "0.3"
stream-cancel = "0.8"
libflate = "1.2.0"

env-tracing-logger = {path="../env-tracing-logger"}
csv-eof = {path="../csv-eof"}
flydra2 = {path="../flydra2", default-features=false, features=["bundle_files"]}
flydra-types = {path="../flydra-types"}
groupby = {path="../groupby"}
zip-or-dir = {path="../zip-or-dir"}
flydra-mvg = {path="../flydra-mvg"}
braidz-parser = {path="../braidz-parser"}
flydra-pt-detect-cfg = {path = "../flydra-feature-detector/flydra-pt-detect-cfg"}

[dev-dependencies]
download-verify = {path="../download-verify"}
tempfile = "3"
zip = { version = "0.6.2", default-features = false, features=["time"] }
approx = "0.5"
env_logger = "0.9.0"
fs_extra = "1.1"

[features]
backtrace = ["zip-or-dir/backtrace", "flydra2/backtrace"]
