[package]
name = "braid-offline"
version = "0.12.0-alpha.9"                       # braid release synchronized
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
clap.workspace = true
thiserror.workspace = true
eyre.workspace = true
csv.workspace = true
serde.workspace = true
toml.workspace = true
itertools.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
libflate = "1.2.0"
indicatif.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
ordered-float.workspace = true

env-tracing-logger.workspace = true
csv-eof.workspace = true
flydra2 = { workspace = true, features = ["bundle_files"] }
braid-config-data.workspace = true
flydra-types.workspace = true
groupby.workspace = true
zip-or-dir.workspace = true
flydra-mvg.workspace = true
braidz-parser.workspace = true
flydra-pt-detect-cfg.workspace = true
mvg.workspace = true
flydra-feature-detector-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true
approx.workspace = true
fs_extra.workspace = true
serde_yaml.workspace = true

download-verify.workspace = true
braidz-types.workspace = true
