[package]
name = "braid-process-video"
version = "0.12.0-alpha.9"                                             # braid release synchronized
edition = "2021"
rust-version = "1.76"
description = "process videos within the Braid multi-camera framework"

[dependencies]
# apt install libavformat-dev libavfilter-dev libavdevice-dev libavresample-dev libvpx-dev
tracing = "0.1"
tokio = { version = "1.17", features = ["macros", "rt", "tracing"] }
tokio-stream = "0.1.8"
color-eyre = "0.6.2"
chrono.workspace = true
serde = { version = "1", features = ["derive"] }
toml = "0.5"
machine-vision-formats.workspace = true
clap = { version = "4", features = ["derive"] }
resvg = "0.19"
tagger = "4.0"
tiny-skia = "0.6.1"
usvg = { version = "0.19.0", default-features = false }
image.workspace = true
base64 = "0.6"
ordered-float = "1"
regex = "1"
futures = "0.3"
csv = "1.1"
tracing-panic = "0.1.1"
nalgebra.workspace = true
indicatif = "0.17"

channellib = { path = "../channellib" }
braidz-types = { path = "../braidz-types" }
env-tracing-logger = { path = "../env-tracing-logger" }
mp4-writer = { path = "../media-utils/mp4-writer", features = [
    "openh264-encode",
] }
ci2-remote-control = { path = "../ci2-remote-control" }
braidz-parser = { path = "../braidz-parser" }
braid-config-data = { path = "../braid-config-data" }
flydra-types = { path = "../flydra-types" }
convert-image.workspace = true
datetime-conversion = { path = "../datetime-conversion" }
basic-frame = { path = "../basic-frame" }
fmf = { path = "../fmf" }
timestamped-frame = { path = "../timestamped-frame" }
flydra2 = { path = "../flydra2" }
flydra-mvg = { path = "../flydra-mvg" }
mvg = { path = "../mvg" }
frame-source = { path = "../media-utils/frame-source" }

[features]
backtrace = ["mp4-writer/backtrace", "braidz-parser/backtrace", "fmf/backtrace"]

[dev-dependencies]
download-verify = { path = "../download-verify" }
serde_json = "1"
