[package]
name = "braid-process-video"
version = "0.12.0-alpha.9"                                             # braid release synchronized
edition = "2021"
rust-version = "1.76"
description = "process videos within the Braid multi-camera framework"

[dependencies]
# apt install libavformat-dev libavfilter-dev libavdevice-dev libavresample-dev libvpx-dev
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
eyre.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
machine-vision-formats.workspace = true
clap.workspace = true
resvg.workspace = true
tagger.workspace = true
tiny-skia.workspace = true
usvg.workspace = true
image.workspace = true
base64.workspace = true
ordered-float.workspace = true
regex.workspace = true
futures.workspace = true
csv.workspace = true
tracing-panic.workspace = true
nalgebra.workspace = true
indicatif.workspace = true

braidz-parser.workspace = true
braidz-types.workspace = true
channellib.workspace = true
ci2-remote-control.workspace = true
env-tracing-logger.workspace = true
mp4-writer = { workspace = true, features = ["openh264-encode"] }
braid-config-data.workspace = true
flydra-types.workspace = true
convert-image.workspace = true
datetime-conversion.workspace = true
basic-frame.workspace = true
fmf.workspace = true
timestamped-frame.workspace = true
flydra2 = { workspace = true, default-features = true }
flydra-mvg.workspace = true
mvg.workspace = true
frame-source.workspace = true

[dev-dependencies]
download-verify.workspace = true
serde_json.workspace = true
