[package]
name = "braid-process-video"
version = "0.12.0-alpha.9"                                             # braid release synchronized
edition = "2021"
rust-version = "1.76"
description = "process videos within the Braid multi-camera framework"

[dependencies]
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
eyre.workspace = true
chrono.workspace = true
serde.workspace = true
toml.workspace = true
machine-vision-formats.workspace = true
clap.workspace = true
resvg = { workspace = true, features = ["text"] }
tagger.workspace = true
usvg.workspace = true
image.workspace = true
base64.workspace = true
ordered-float.workspace = true
regex.workspace = true
futures.workspace = true
csv.workspace = true
tracing-panic.workspace = true
nalgebra.workspace = true
indicatif.workspace = true

braidz-parser.workspace = true
braidz-types.workspace = true
strand-cam-remote-control.workspace = true
env-tracing-logger.workspace = true
flydra-feature-detector = { workspace = true, features = ["do_not_use_ipp"] }
flydra-pt-detect-cfg.workspace = true
mp4-writer = { workspace = true, features = ["openh264-encode", "nv-encode"] }
braid-config-data.workspace = true
braid-types.workspace = true
convert-image.workspace = true
strand-datetime-conversion.workspace = true
strand-dynamic-frame = { workspace = true, features = ["convert-image"] }
fmf.workspace = true
flydra2 = { workspace = true, default-features = true }
flydra-mvg.workspace = true
braid-mvg.workspace = true
frame-source = { workspace = true, features = ["openh264"] }

[dev-dependencies]
download-verify.workspace = true
serde_json.workspace = true
