[package]
name = "braid"
description = "multi-camera realtime 3D tracker"
version.workspace = true
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://strawlab.org/braid"
default-run = "braid"

[dependencies]
toml.workspace = true
clap.workspace = true
tracing.workspace = true
eyre.workspace = true
dotenv.workspace = true
chrono.workspace = true

env-tracing-logger.workspace = true
braid-types.workspace = true
flydra-feature-detector-types.workspace = true
flydra-pt-detect-cfg.workspace = true
braid-config-data.workspace = true
