[package]
name = "braidz-export-rrd"
description = "Export a .braidz file to an .rrd rerun file"
version = "0.12.0-alpha.4"                                  # braid release synchronized
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
serde_yaml = "0.9"
color-eyre = "0.6.2"

tracing = "0.1.40"
rerun = "0.14.1"
opencv-ros-camera = "0.14.1"
cam-geom = "0.14.1"
nalgebra = "0.32.4"
regex = "1.10.3"
ndarray = "0.15.6"
machine-vision-formats = "0.1.1"
rayon = "1.9.0"
opencv = { version = "0.88.8", optional = true }

braidz-parser = { path = "../braidz-parser" }
env-tracing-logger = { path = "../env-tracing-logger" }
mvg = { path = "../mvg", features = ["rerun-io"] }
braidz-types = { path = "../braidz-types" }
flydra-types = { path = "../flydra-types" }
convert-image = { path = "../convert-image" }
frame-source = { path = "../media-utils/frame-source" }
basic-frame = { path = "../basic-frame", features = ["convert-image"] }
ci2-remote-control = { path = "../ci2-remote-control" }
mp4-writer = { path = "../media-utils/mp4-writer" }

[features]
default = ["undistort-images", "openh264-encode"]

undistort-images = ["opencv"]
openh264-encode = ["mp4-writer/openh264-encode"]
