[package]
name = "braidz-mcsc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
tracing.workspace = true
polars = { version = "0.45", default-features = false, features = [
    "dtype-u8",
    "fmt",
    "lazy",
    "partition_by",
    "polars-io",
    "serde",
] }
polars-io = { version = "0.45", default-features = false, features = ["csv"] }
opencv-ros-camera.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
image.workspace = true

env-tracing-logger.workspace = true
braidz-parser.workspace = true
flydra-types.workspace = true
zip-or-dir.workspace = true
flydra-mvg.workspace = true
