[package]
name = "braidz-parser"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
thiserror = "1.0.33"
log = "0.4"
serde_json = "1.0"
serde_yaml = "0.8"
csv = "1.1"
libflate = "0.1"
zip = { version = "0.6.3", default-features = false, features=["deflate", "time"] }
chrono = {version="0.4.23", default-features=false, features=["clock", "std", "wasmbind"]}
serde-xml-rs = "0.5.1"
hdrhistogram = "7.1"
base64 = "0.12"
ordered-float = "1"
image = {version = "0.24", default-features = false, features=["png"]}
regex = "1.8.4"

csv-eof = {path="../csv-eof"}
groupby = {path="../groupby"}
braidz-types = {path="../braidz-types"}
datetime-conversion = {path = "../datetime-conversion"}
flydra-types = {path="../flydra-types"}
mvg = {path="../mvg"}
flydra-mvg = {path="../flydra-mvg"}
zip-or-dir = {path="../zip-or-dir"}

[dev-dependencies]
env_logger = "0.8"
download-verify = {path="../download-verify"}

[features]
backtrace = ["mvg/backtrace", "flydra-mvg/backtrace"]
