[package]
name = "braidz-parser"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
csv.workspace = true
libflate.workspace = true
zip.workspace = true
chrono.workspace = true
serde-xml-rs.workspace = true
hdrhistogram.workspace = true
base64.workspace = true
ordered-float.workspace = true
image.workspace = true
regex.workspace = true

csv-eof.workspace = true
groupby.workspace = true
braidz-types.workspace = true
strand-datetime-conversion.workspace = true
braid-types.workspace = true
braid-mvg.workspace = true
flydra-mvg.workspace = true
zip-or-dir.workspace = true

[dev-dependencies]
env_logger.workspace = true
download-verify.workspace = true
