[package]
name = "braidz-rerun"
version = "0.0.1"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
eyre.workspace = true

tracing.workspace = true
re_types.workspace = true
re_sdk = { workspace = true, features = ["data_loaders"] }

image.workspace = true
opencv-ros-camera.workspace = true
cam-geom.workspace = true
nalgebra.workspace = true
machine-vision-formats.workspace = true
convert-image.workspace = true

braidz-parser.workspace = true
mvg = { workspace = true, features = ["rerun-io"] }
braidz-types.workspace = true
braid-types.workspace = true
frame-source.workspace = true
strand-dynamic-frame = { workspace = true, features = ["convert-image"] }
mp4-writer = { workspace = true, features = ["nv-encode"] }
undistort-image.workspace = true
