[package]
name = "braidz-types"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version="1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="^1.0", features=["derive"]}
chrono = {version="0.4", features=["serde"]}

flydra-types = {path="../flydra-types"}
mvg = {path="../mvg", features=["serde-serialize"]}

[features]
backtrace = ["mvg/backtrace"]
