[package]
name = "braidz-types"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
chrono = { version = "0.4.23", default-features = false, features = [
    "serde",
    "clock",
    "std",
    "wasmbind",
] }

flydra-types = { path = "../flydra-types" }
mvg = { path = "../mvg", features = ["serde-serialize"] }
regex = "1.10.3"

[features]
backtrace = ["mvg/backtrace"]
