[package]
name = "braidz-types"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
chrono.workspace = true

braid-types.workspace = true
braid-mvg.workspace = true
regex.workspace = true
