[package]
name = "braidz-viewer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version="1.60"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytesize = "1.0"
log = "0.4"
wasm-logger = "0.2.0"

gloo = "0.4"
gloo-file = "0.2"
yew = "0.19"

wasm-bindgen = "^0.2.45"
js-sys = "0.3.28"
plotters = "0.3"
plotters-canvas = "0.3"
wee_alloc = "0.4.5"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "0.3"

mvg = {path="../mvg", features=["serde-serialize"]}
zip-or-dir = {path="../zip-or-dir"}
braidz-types = {path="../braidz-types"}
braidz-parser = {path="../braidz-parser"}

[dependencies.web-sys]
version="0.3.28"
features=[
    "Blob",
    "DateTimeValue",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "HtmlInputElement",
    "DataTransfer",
    "DragEvent",
]

[features]
backtrace = ["mvg/backtrace"]
