[package]
name = "braidz-viewer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytesize = "1.0"
log = "0.4"
wasm-logger = "0.2.0"

gloo = "0.8.0"
gloo-file = "0.2"
yew = { version = "0.21.0", features = ["csr"] }

wasm-bindgen = "0.2.92"
js-sys = "0.3.28"
plotters = { version = "0.3.4", default-features = false, features = [
    "bitmap_encoder",
    "bitmap_gif",
    "svg_backend",
    "image",
    "deprecated_items",
    "all_series",
    "all_elements",
    "full_palette",
] }
plotters-canvas = "0.3"
serde = { version = "^1.0.85", features = ['derive'] }
futures = "0.3"

mvg = { path = "../mvg", features = ["serde-serialize"] }
zip-or-dir = { path = "../zip-or-dir" }
braidz-types = { path = "../braidz-types" }
braidz-parser = { path = "../braidz-parser" }
wasm-bindgen-futures = { version = "0.4.37" }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Blob",
    "DateTimeValue",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "FileSystemFileHandle",
    "HtmlInputElement",
    "DataTransfer",
    "DragEvent",
]

[features]
backtrace = ["mvg/backtrace"]
