[package]
name = "braidz-viewer"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bytesize = "1.0"
log.workspace = true
wasm-logger.workspace = true

gloo = "0.8.0"
gloo-file.workspace = true
yew.workspace = true

wasm-bindgen.workspace = true
js-sys = "0.3.28"
plotters = { version = "0.3.4", default-features = false, features = [
    "bitmap_encoder",
    "bitmap_gif",
    "svg_backend",
    "image",
    "deprecated_items",
    "all_series",
    "all_elements",
    "full_palette",
] }
plotters-canvas = "0.3"
serde.workspace = true
futures.workspace = true

mvg.workspace = true
zip-or-dir.workspace = true
braidz-types.workspace = true
braidz-parser.workspace = true
wasm-bindgen-futures = { version = "0.4.37" }
ads-webasm.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    "Blob",
    "DateTimeValue",
    "Event",
    "File",
    "FileList",
    "FileReader",
    "FileSystemFileHandle",
    "HtmlInputElement",
    "DataTransfer",
    "DragEvent",
]
