[package]
name = "bui-backend-session"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version="1.60"

[dependencies]
log = "0.4"
futures = "0.3"
hyper = {version="1.1", default-features = false, features=["client","http1"]}
parking_lot = "0.12"
http = "1.0"
bytes = "1.0"
serde = "1"
cookie = "0.18"
hyper-util = { version = "0.1.1", features = ["client-legacy", "tokio", "client", "http1"] }
http-body-util = "0.1.0"
thiserror = "1.0.51"
bui-backend-types = "0.8"
