[package]
name = "bui-backend-session"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
tracing.workspace = true
futures.workspace = true
hyper.workspace = true
http.workspace = true
bytes.workspace = true
serde.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
thiserror.workspace = true

bui-backend-session-types.workspace = true
rust-cam-bui-types.workspace = true
flydra-types.workspace = true
axum.workspace = true
cookie_store.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
