[package]
name = "camtrig-comms"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
enum-iter = { path="../enum-iter", default-features = false }
defmt = {version="0.3", optional=true }

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
ssmarshal = "1.0"

[features]
std = []
print-defmt = ["defmt"]
