[package]
name = "ci2-async"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
thread-control = "0.1.2"

ci2 = {path="../ci2"}
machine-vision-formats = { path = "../machine-vision-formats" }
timestamped-frame = { path = "../timestamped-frame" }
basic-frame = { path = "../basic-frame" }
