[package]
name = "ci2-async"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[dependencies]
futures = "0.3"
log.workspace = true
parking_lot.workspace = true
thread-control = "0.1.2"

ci2 = { path = "../ci2" }
machine-vision-formats.workspace = true
timestamped-frame = { path = "../timestamped-frame" }
basic-frame = { path = "../basic-frame" }
