[package]
name = "ci2-cli"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version="1.60"

[[bin]]
name = "ci2"
path = "src/ci2-cli.rs"
doc = false

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3.4", features = ["derive"] }
chrono = {version="0.4.23", default-features=false, features=["clock", "std", "wasmbind"]}
anyhow = "1"

ci2 = { path = "../ci2" }

ci2-pyloncxx = { path = "../ci2-pyloncxx", optional = true }

[features]
default = []

# Backend choice
backend_pyloncxx = ["ci2-pyloncxx"]

backtrace = ["ci2/backtrace"]
