[package]
name = "ci2-cli"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2021"
rust-version = "1.76"

[[bin]]
name = "ci2"
path = "src/ci2-cli.rs"
doc = false

[dependencies]
log.workspace = true
env_logger.workspace = true
clap.workspace = true
chrono.workspace = true
anyhow.workspace = true

ci2 = { path = "../ci2" }

ci2-pyloncxx = { path = "../ci2-pyloncxx", optional = true }

[features]
default = ["backend_pyloncxx"]

# Backend choice
backend_pyloncxx = ["ci2-pyloncxx"]
