[package]
name = "ci2-dc1394"
description = "implementation of ci2 interface for dc1394"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
log = "0.4"
parking_lot = "0.11"
machine-vision-formats = { path = "../machine-vision-formats" }
basic-frame = { path = "../basic-frame" }
ci2 = { path = "../ci2" }
dc1394 = { path = "../dc1394" }
libdc1394-sys = "0.2"
chrono = "0.4"
select = {path = "../select"}
failure = "0.1"
