[package]
name = "ci2-flycap2"
description = "implementation of ci2 interface for flycap2"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]

[dependencies]
log = "0.4"
machine-vision-formats = "0.1"
timestamped-frame = { path = "../timestamped-frame" }
ci2 = { path = "../ci2" }
flycap2 = { path = "../flycap2" }
libflycapture2-sys = "0.1.0"
chrono = "0.4"
parking_lot = "0.11"
